<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLinear"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog">

    <TextView
        android:id="@+id/winDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/red_dialog"
        android:text="@string/champion"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:scaleType="center" />

    <TextView
        android:id="@+id/winDialogBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/_1_s_gana"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        android:text="@string/returngame"
        app:cornerRadius="30dp"/>

</LinearLayout>
